--- a/index.html
+++ b/index.html
@@ -7,30 +7,40 @@
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
-    <div class="container">
-        <button>All</button>
-        <button>Cactuses</button>
-        <button>Exotics</button>
-        <button>Greens</button>
-        <button>Popular</button>
-        <button>Various</button>
-        <button>Winter</button>
-    </div>
+<body>   
 <div class="container">
-    <img flowertype="Cactuses" src="https://media.istockphoto.com/id/486466536/photo/cactus-in-pot.jpg?s=612x612&w=0&k=20&c=0niuPBiocGqAmn9RNbwb_q_j4FE9BxMaZ2TmynbWUtE=" alt="">
-    <img flowertype="Exotics" src="https://cdn.shopify.com/s/files/1/0267/1375/1747/products/Exotic-Pot-Featured.jpg?v=1602215998" alt="">
-    <img flowertype="Exotics" src="https://cdn.shopify.com/s/files/1/0267/1375/1747/products/Orange-and-Yellow-Colour-Pot-Featured_500x.jpg?v=1602216316" alt="">
-    <img flowertype="Cactuses" src="https://media.istockphoto.com/id/694801740/photo/cactus-in-pot-on-white-background.jpg?s=612x612&w=0&k=20&c=vrRV2yep3EjLdvRDrzGH4-RHd6iNRtBWykeQLWZMAOY=" alt="">
+    <button onclick="flowerSelect(this)">All</button>
+    <button onclick="flowerSelect(this)">Cactuses</button>
+    <button onclick="flowerSelect(this)">Exotics</button>
+    <button onclick="flowerSelect(this)">Greens</button>
+    <button onclick="flowerSelect(this)">Popular</button>
+    <button onclick="flowerSelect(this)">Various</button>
+    <button onclick="flowerSelect(this)">Winter</button>
+</div>
+<div class="container">
+    <img flowertype="Cactuses"
+        src="https://media.istockphoto.com/id/486466536/photo/cactus-in-pot.jpg?s=612x612&w=0&k=20&c=0niuPBiocGqAmn9RNbwb_q_j4FE9BxMaZ2TmynbWUtE="
+        alt="">
+    <img flowertype="Exotics"
+        src="https://cdn.shopify.com/s/files/1/0267/1375/1747/products/Exotic-Pot-Featured.jpg?v=1602215998" alt="">
+    <img flowertype="Exotics"
+        src="https://cdn.shopify.com/s/files/1/0267/1375/1747/products/Orange-and-Yellow-Colour-Pot-Featured_500x.jpg?v=1602216316"
+        alt="">
+    <img flowertype="Cactuses"
+        src="https://media.istockphoto.com/id/694801740/photo/cactus-in-pot-on-white-background.jpg?s=612x612&w=0&k=20&c=vrRV2yep3EjLdvRDrzGH4-RHd6iNRtBWykeQLWZMAOY="
+        alt="">
     <img flowertype="Various" src="https://m.media-amazon.com/images/I/71luXaTc6OL._SL1500_.jpg" alt="">
-    <img flowertype="Winter" src="https://mobileimages.lowes.com/productimages/80ba5fe5-adfa-4e77-84b2-549ebcafdb6e/02108166.jpg" alt="">
+    <img flowertype="Winter"
+        src="https://mobileimages.lowes.com/productimages/80ba5fe5-adfa-4e77-84b2-549ebcafdb6e/02108166.jpg" alt="">
     <img flowertype="Greens" src="https://m.media-amazon.com/images/I/61RX1perXXS._AC_UF894,1000_QL80_.jpg" alt="">
     <img flowertype="Various" src="https://andblooms.com/upload/2021/07/1627670759_pink_tulip_in_pot.jpg" alt="">
     <img flowertype="Various" src="https://www.flowerpotflorist.com.au/images/products/large/jushp1r3tj.jpg" alt="">
     <img flowertype="Various" src="https://m.media-amazon.com/images/I/51ltiP9TKrL.jpg" alt="">
     <img flowertype="Popular" src="https://5.imimg.com/data5/OA/HT/MY-65385261/rose-plant-pot-500x500.jpg" alt="">
     <img flowertype="Popular" src="https://i.ebayimg.com/images/g/dGMAAOSwCd9jD1Dd/s-l1600.jpg" alt="">
-    <img flowertype="Popular" src="https://asset.bloomnation.com/c_pad,d_vendor:global:catalog:product:image.png,f_auto,fl_preserve_transparency,q_auto/v1611911685/vendor/3418/catalog/product/c/a/ca-1008-057_2_5.jpg" alt="">
+    <img flowertype="Popular"
+        src="https://asset.bloomnation.com/c_pad,d_vendor:global:catalog:product:image.png,f_auto,fl_preserve_transparency,q_auto/v1611911685/vendor/3418/catalog/product/c/a/ca-1008-057_2_5.jpg"
+        alt="">
 </div>
     <script src="assets/js/main.js"></script>
 </body>
